gcc/testsuite/rust/rustc/ui/parser/issues/issue-83639.rs
//@ check-fail
// ignore-tidy-tab

fn main() {
    """	" // { dg-error "" "" { target *-*-* } }
}

